fix filename wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,7 +235,7 @@ iframe.ghost {
 }
 
 .file > .icon {
-	display: inline-block;
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	width: 50%;
@@ -247,7 +247,9 @@ iframe.ghost {
 }
 
 .file > .filename {
-	display: inline-block;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 
 	max-width: 100%;
 	overflow: hidden;
@@ -271,6 +273,7 @@ iframe.ghost {
 	max-width: none;
 	overflow: initial;
 	text-overflow: initial;
+	word-wrap: break-word;
 }
 
 .file-txt > .icon {
